<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="104dp"
    android:fillViewport="true"
    tools:context=".EditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/profile_image_size_large"
            android:layout_height="@dimen/profile_image_size_large">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/profile_corner_radius_large"
                app:cardElevation="@dimen/common_padding_none">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="centerCrop"/>
            </androidx.cardview.widget.CardView>
            
            <ImageButton
                android:id="@+id/btnSelectPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_image_search"
                android:background="?selectableItemBackground"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_name">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_email">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_website">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWebSite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_phone">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/common_padding_none"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginEnd="@dimen/common_padding_min"
                android:hint="@string/hint_latitud">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLatitud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal|numberSigned"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@id/etLongitud"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/common_padding_none"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:layout_marginStart="@dimen/common_padding_min"
               android:hint="@string/hint_Longitud">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLongitud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal|numberSigned"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>





    </LinearLayout>




</ScrollView>